--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test data read\n",
     "covid_19_dataset = pd.read_csv('../dataset/time-series-19-covid-combined.csv')\n",
     "regions_dataset = pd.read_csv('../dataset/Countries by continents.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Countries & Continents Dropdown Menus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Box.__init__() takes from 1 to 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 12\u001b[0m\n\u001b[0;32m      1\u001b[0m countries_dropdown_menu \u001b[38;5;241m=\u001b[39m wgts\u001b[38;5;241m.\u001b[39mDropdown(\n\u001b[0;32m      2\u001b[0m     options\u001b[38;5;241m=\u001b[39m regions_dataset[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountry\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique(),\n\u001b[0;32m      3\u001b[0m     description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountry:\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m     disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m      5\u001b[0m )\n\u001b[0;32m      7\u001b[0m continent_dropdown_menu \u001b[38;5;241m=\u001b[39m wgts\u001b[38;5;241m.\u001b[39mDropdown(\n\u001b[0;32m      8\u001b[0m     options\u001b[38;5;241m=\u001b[39m regions_dataset[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mContinent\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique(),\n\u001b[0;32m      9\u001b[0m     description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mContinent:\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m     disabled\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m )\n\u001b[1;32m---> 12\u001b[0m \u001b[43mwgts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mHBox\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontinent_dropdown_menu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcountries_dropdown_menu\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Box.__init__() takes from 1 to 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "countries_dropdown_menu = wgts.Dropdown(\n",
+    "    options= regions_dataset['Country'].unique(),\n",
+    "    description='Country:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "continent_dropdown_menu = wgts.Dropdown(\n",
+    "    options= regions_dataset['Continent'].unique(),\n",
+    "    description='Continent:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "wgts.HBox([continent_dropdown_menu, countries_dropdown_menu])"
    ]
   }
  ],
