--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -81,18 +81,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Regional Category Radio buttons"
+    "### Creating Regional Category Radio Button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "regional_category_radio = wgts.RadioButtons(\n",
     "    options=['Country', 'Region', 'World'],\n",
     "    description='Regional Category:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Time Category Radio Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_category_radio = wgts.RadioButtons(\n",
+    "    options=['Daily', 'Weekly', 'Monthly', 'Complete'],\n",
+    "    description='Time Category:',\n",
     "    disabled=False\n",
     ")"
    ]
