--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -106,14 +106,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "time_category_radio = wgts.RadioButtons(\n",
-    "    options=['Daily', 'Weekly', 'Monthly', 'Complete'],\n",
+    "    options=['Daily', 'Weekly', 'Monthly', 'Yearly', 'Complete'],\n",
     "    description='Time Category:',\n",
     "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Months, Years Dropdown Menus & Day DatePicker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1db53452f0ac4f6db4035236ed31081f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(DatePicker(value=None, description='Day:', max=datetime.date(2022, 4, 16), min=datetime.date(20…"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "# minimum date value in dataset\n",
+    "dateMin = datetime.datetime.strptime(covid_19_dataset['Date'].min(), '%Y-%m-%d').date()\n",
+    "# maximum date value in dataset\n",
+    "dateMax = datetime.datetime.strptime(covid_19_dataset['Date'].max(), '%Y-%m-%d').date()\n",
+    "\n",
+    "day_datepicker = wgts.DatePicker(\n",
+    "    description='Day:',\n",
+    "    disabled=False,\n",
+    "    max=dateMax,\n",
+    "    min=dateMin\n",
+    ")\n",
+    "\n",
+    "year_dropdown_menu = wgts.Dropdown(\n",
+    "    options= range(dateMin.year, dateMax.year + 1),\n",
+    "    description='Year:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "month_dropdown_menu = wgts.Dropdown(\n",
+    "    options= [\"January\", \"February\", \"March\", \"April\", \"May\", \"June\",\n",
+    "          \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"],\n",
+    "    description='Month:',\n",
+    "    disabled=False,\n",
     ")"
    ]
   }
