--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -121,30 +121,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Months, Years Dropdown Menus & Day DatePicker"
+    "### Creating Months, Years Dropdown Menus & Day DatePicker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1db53452f0ac4f6db4035236ed31081f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(DatePicker(value=None, description='Day:', max=datetime.date(2022, 4, 16), min=datetime.date(20…"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "# minimum date value in dataset\n",
@@ -170,6 +154,28 @@
     "          \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"],\n",
     "    description='Month:',\n",
     "    disabled=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Reload Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload_button = wgts.Button(\n",
+    "    description='Reload',\n",
+    "    disabled=False,\n",
+    "    button_style='info',\n",
+    "    tooltip='Reload',\n",
+    "    icon='check'\n",
     ")"
    ]
   }
