--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test data read\n",
-    "covid_19_dataset = pd.read_csv('../dataset/time-series-19-covid-combined.csv')\n",
+    "covid_19_dataset = pd.read_csv('../dataset/new_dataset.csv')\n",
     "regions_dataset = pd.read_csv('../dataset/Countries by continents.csv')"
    ]
   },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,43 @@
     "    tooltip='Reload',\n",
     "    icon='check'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample PyPlot Bar Graph Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6726\n",
+      "698\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_day = datetime.datetime.strptime('2021-03-18', '%Y-%m-%d').date()\n",
+    "sample_day_before = sample_day - datetime.timedelta(days=1)\n",
+    "sample_country = 'Mexico'\n",
+    "\n",
+    "sample = covid_19_dataset[covid_19_dataset['Country'] == sample_country]\n",
+    "sample = sample[sample['Date'] == str(sample_day)]\n",
+    "\n",
+    "sample_prev = covid_19_dataset[covid_19_dataset['Country'] == sample_country]\n",
+    "sample_prev = sample_prev[sample_prev['Date'] == str(sample_day_before)]\n",
+    "\n",
+    "sample_confirmed = sample['Confirmed'].values[0] - sample_prev['Confirmed'].values[0]\n",
+    "sample_deaths = sample['Deaths'].values[0] - sample_prev['Deaths'].values[0]\n",
+    "\n"
    ]
   }
  ],
