--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test data read\n",
-    "covid_19_dataset = pd.read_csv('../dataset/new_dataset.csv')\n",
+    "covid_19_dataset = pd.read_csv('../dataset/new_dataset_2.csv')\n",
     "regions_dataset = pd.read_csv('../dataset/Countries by continents.csv')"
    ]
   },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,32 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6726\n",
-      "698\n"
+      "             Date Country  Confirmed  Recovered  Deaths\n",
+      "95077  2021-03-18  Mexico     6726.0     4364.0   698.0\n"
      ]
     }
    ],
    "source": [
     "sample_day = datetime.datetime.strptime('2021-03-18', '%Y-%m-%d').date()\n",
-    "sample_day_before = sample_day - datetime.timedelta(days=1)\n",
     "sample_country = 'Mexico'\n",
     "\n",
     "sample = covid_19_dataset[covid_19_dataset['Country'] == sample_country]\n",
     "sample = sample[sample['Date'] == str(sample_day)]\n",
     "\n",
-    "sample_prev = covid_19_dataset[covid_19_dataset['Country'] == sample_country]\n",
-    "sample_prev = sample_prev[sample_prev['Date'] == str(sample_day_before)]\n",
-    "\n",
-    "sample_confirmed = sample['Confirmed'].values[0] - sample_prev['Confirmed'].values[0]\n",
-    "sample_deaths = sample['Deaths'].values[0] - sample_prev['Deaths'].values[0]\n",
-    "\n"
+    "print(sample.head())"
    ]
   }
  ],
