--- a/Demo-1/Demo-1.ipynb
+++ b/Demo-1/Demo-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries_dropdown_menu = wgts.Dropdown(\n",
-    "    options= regions_dataset['Country'].unique(),\n",
-    "    description='Country:',\n",
-    "    disabled=False,\n",
-    ")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "continent_dropdown_menu = wgts.Dropdown(\n",
     "    options= regions_dataset['Continent'].unique(),\n",
     "    description='Continent:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "continent_filter = regions_dataset['Continent'] == continent_dropdown_menu.value\n",
+    "countries = regions_dataset[continent_filter]\n",
+    "countries = countries['Country']\n",
+    "\n",
+    "countries_dropdown_menu = wgts.Dropdown(\n",
+    "    options= countries,\n",
+    "    description='Country:',\n",
     "    disabled=False,\n",
     ")"
    ]
@@ -87,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "regional_category_radio = wgts.RadioButtons(\n",
-    "    options=['Country', 'Region', 'World'],\n",
+    "    options=['Country', 'Continent', 'World'],\n",
     "    description='Regional Category:',\n",
     "    disabled=False\n",
     ")"
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +148,7 @@
     "day_datepicker = wgts.DatePicker(\n",
     "    description='Day:',\n",
     "    disabled=False,\n",
+    "    value=dateMin,\n",
     "    max=dateMax,\n",
     "    min=dateMin\n",
     ")\n",
@@ -147,15 +156,16 @@
     "year_dropdown_menu = wgts.Dropdown(\n",
     "    options= range(dateMin.year, dateMax.year + 1),\n",
     "    description='Year:',\n",
-    "    disabled=False,\n",
+    "    disabled=True,\n",
     ")\n",
     "\n",
     "month_dropdown_menu = wgts.Dropdown(\n",
     "    options= [\"January\", \"February\", \"March\", \"April\", \"May\", \"June\",\n",
     "          \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"],\n",
     "    description='Month:',\n",
-    "    disabled=False,\n",
-    ")"
+    "    disabled=True,\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,6 +1289,262 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Widget Events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regional Category Radio Button Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_regional_category_change(change):\n",
+    "    index = change['new']\n",
+    "    # enable country and continent dropdown menus\n",
+    "    if index == 0:\n",
+    "        continent_dropdown_menu.disabled = False\n",
+    "        countries_dropdown_menu.disabled = False\n",
+    "\n",
+    "    # disable country but enable continent dropdown menus\n",
+    "    elif index == 1:\n",
+    "        continent_dropdown_menu.disabled = False\n",
+    "        countries_dropdown_menu.disabled = True\n",
+    "\n",
+    "    # disable both country and continent dropdown menus\n",
+    "    elif index == 2:\n",
+    "        continent_dropdown_menu.disabled = True\n",
+    "        countries_dropdown_menu.disabled = True\n",
+    "\n",
+    "regional_category_radio.observe(on_regional_category_change, 'index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continent Dropdown Menu Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_continent_menu_change(change):\n",
+    "    # load countries of newly selected continent\n",
+    "    continent = change['new']\n",
+    "    continent_filter = regions_dataset['Continent'] == continent\n",
+    "    countries = regions_dataset[continent_filter]\n",
+    "    countries = countries['Country']\n",
+    "    countries_dropdown_menu.options = countries\n",
+    "\n",
+    "continent_dropdown_menu.observe(on_continent_menu_change, 'value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time Category Radio Button Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_time_category_change(change):\n",
+    "    index = change['new']\n",
+    "    # enable day datepicker and disable year and month dropdown menus\n",
+    "    if index == 0:\n",
+    "        day_datepicker.disabled = False\n",
+    "        year_dropdown_menu.disabled = True\n",
+    "        month_dropdown_menu.disabled = True\n",
+    "\n",
+    "    # disable day datepicker and enable year and month dropdown menus\n",
+    "    elif index == 1:\n",
+    "        day_datepicker.disabled = True\n",
+    "        year_dropdown_menu.disabled = False\n",
+    "        month_dropdown_menu.disabled = False\n",
+    "\n",
+    "    # enable year drop down menu and disable both day datepicker and month dropdown menu\n",
+    "    elif index == 2:\n",
+    "        day_datepicker.disabled = True\n",
+    "        year_dropdown_menu.disabled = False\n",
+    "        month_dropdown_menu.disabled = True\n",
+    "\n",
+    "    # disable all of day datepicker, year and month dropdown menus\n",
+    "    elif index == 3:\n",
+    "        day_datepicker.disabled = True\n",
+    "        year_dropdown_menu.disabled = True\n",
+    "        month_dropdown_menu.disabled = True\n",
+    "\n",
+    "time_category_radio.observe(on_time_category_change, 'index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reload Button Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28aab097cc0244bea754b0eef15f4936",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Button(button_style='info', description='Reload', icon='check', style=ButtonStyle(), tooltip='R…"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = wgts.Output()\n",
+    "def on_reload_click(change):\n",
+    "    output.clear_output()\n",
+    "    time_category = time_category_radio.index\n",
+    "    regional_category = regional_category_radio.index\n",
+    "    \n",
+    "    # time_category = 0 --> daily\n",
+    "    if time_category == 0:\n",
+    "        # regional_category 0 --> country\n",
+    "        if regional_category == 0:\n",
+    "            with output:\n",
+    "                plot_country_by_day(countries_dropdown_menu.value, str(day_datepicker.value))\n",
+    "        # regional_category 1 --> continent\n",
+    "        elif regional_category == 1:\n",
+    "            with output:\n",
+    "                plot_continent_by_day(continent_dropdown_menu.value, str(day_datepicker.value))\n",
+    "        # regional_category 2 --> world\n",
+    "        elif regional_category == 2:\n",
+    "            with output:\n",
+    "                plot_world_by_day(str(day_datepicker.value))\n",
+    "    # time_category = 1 --> monthly\n",
+    "    if time_category == 1:\n",
+    "        month_num = datetime.datetime.strptime(month_dropdown_menu.value, \"%B\").month\n",
+    "        year_num = year_dropdown_menu.value\n",
+    "        # regional_category 0 --> country\n",
+    "        if regional_category == 0:\n",
+    "            with output:\n",
+    "                    plot_country_by_month(countries_dropdown_menu.value, month_num, year_num)\n",
+    "        # regional_category 1 --> continent\n",
+    "        elif regional_category == 1:\n",
+    "            with output:\n",
+    "                    plot_continent_by_month(continent_dropdown_menu.value, month_num, year_num)\n",
+    "        # regional_category 2 --> world\n",
+    "        elif regional_category == 2:\n",
+    "            with output:\n",
+    "                    plot_world_by_month(month_num, year_num)\n",
+    "    # time_category = 2 --> yearly\n",
+    "    if time_category == 2:\n",
+    "        # regional_category 0 --> country\n",
+    "        if regional_category == 0:\n",
+    "            with output:\n",
+    "                    plot_country_by_year(countries_dropdown_menu.value, year_dropdown_menu.value)\n",
+    "        # regional_category 1 --> continent\n",
+    "        elif regional_category == 1:\n",
+    "            with output:\n",
+    "                    plot_continent_by_year(continent_dropdown_menu.value, year_dropdown_menu.value)\n",
+    "        # regional_category 2 --> world\n",
+    "        elif regional_category == 2:\n",
+    "            with output:\n",
+    "                    plot_world_by_year(year_dropdown_menu.value)\n",
+    "    # time_category = 3 --> complete\n",
+    "    if time_category == 3:\n",
+    "        # regional_category 0 --> country\n",
+    "        if regional_category == 0:\n",
+    "            with output:\n",
+    "                    plot_country_by_total(countries_dropdown_menu.value)\n",
+    "        # regional_category 1 --> continent\n",
+    "        elif regional_category == 1:\n",
+    "            with output:\n",
+    "                    plot_continent_by_total(continent_dropdown_menu.value)\n",
+    "        # regional_category 2 --> world\n",
+    "        elif regional_category == 2:\n",
+    "            with output:\n",
+    "                    plot_world_by_total()\n",
+    "\n",
+    "    \n",
+    "reload_button.on_click(on_reload_click)\n",
+    "wgts.VBox([reload_button, output, time_category_radio, day_datepicker, month_dropdown_menu, year_dropdown_menu, regional_category_radio, countries_dropdown_menu, continent_dropdown_menu])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_layout = wgts.HBox([time_category_radio, wgts.VBox([day_datepicker, month_dropdown_menu, year_dropdown_menu])])\n",
+    "region_layout = wgts.HBox([regional_category_radio, wgts.VBox([continent_dropdown_menu, countries_dropdown_menu])])\n",
+    "\n",
+    "demo = wgts.VBox([time_layout, regional_category_radio, reload_button, output])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "699be7545bbb46d08f6f8b28373efff2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(RadioButtons(description='Time Category:', options=('Daily', 'Monthly', 'Yearly'…"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo"
    ]
   }
  ],
