Feature 1 v1.1.1: datensatz einlesen
Feature 1 initializiert

--- a/Demo-2.ipynb
+++ b/Demo-2.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "# Demo-2: Heatmap"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Demo 1 Feature 1"
+   ]
   }
  ],
  "metadata": {
