--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -6,11 +6,24 @@
    "source": [
     "# Demo-3: Bericht Erstellen "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aufgabe 1.1"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
