--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -11,7 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aufgabe 1.1"
+    "## Aufgabe 1.1 Abhängigkeit Hinzufügen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Abhängigkeit Hinzufügen\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as wgts\n",
+    "from IPython.display import display\n",
+    "import numpy as np"
    ]
   }
  ],
