--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -72,6 +72,13 @@
     "# Show plot\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting Functions"
+   ]
   }
  ],
  "metadata": {
