--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -79,6 +79,27 @@
    "source": [
     "## Plotting Functions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_country_timeseries(country: str, from_date: str, to_date: str):\n",
+    "    \"\"\"\n",
+    "    Plots a time series graph for a given country and date range.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        country (str): The country name to filter data for.\n",
+    "        from_date (str): The start date in 'YYYY-MM-DD' format.\n",
+    "        to_date (str): The end date in 'YYYY-MM-DD' format.\n",
+    "    \"\"\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
