--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -31,6 +31,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loading Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_19_dataset = pd.read_csv('cleaned_dataset.csv')\n",
+    "regions_dataset = pd.read_csv('regions_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sample Plot"
    ]
   },
@@ -86,9 +103,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def plot_country_timeseries(country: str, from_date: str, to_date: str):\n",
     "    \"\"\"\n",
     "    Plots a time series graph for a given country and date range.\n",
@@ -98,7 +112,11 @@
     "        from_date (str): The start date in 'YYYY-MM-DD' format.\n",
     "        to_date (str): The end date in 'YYYY-MM-DD' format.\n",
     "    \"\"\"\n",
-    "\n"
+    "    # Load dataset\n",
+    "    df = pd.DataFrame(covid_19_dataset)\n",
+    "\n",
+    "    # Convert Date column to datetime\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n"
    ]
   }
  ],
