--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -116,7 +116,34 @@
     "    df = pd.DataFrame(covid_19_dataset)\n",
     "\n",
     "    # Convert Date column to datetime\n",
-    "    df['Date'] = pd.to_datetime(df['Date'])\n"
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "    # Filter data for the specified country and date range\n",
+    "    df_country = df[(df['Country'] == country) & (df['Date'] >= from_date) & (df['Date'] <= to_date)]\n",
+    "    \n",
+    "    # Sort values by date\n",
+    "    df_country = df_country.sort_values(by=\"Date\")\n",
+    "\n",
+    "    # Compute cumulative sum\n",
+    "    df_country['Total Confirmed'] = df_country['Confirmed'].cumsum()\n",
+    "    df_country['Total Recovered'] = df_country['Recovered'].cumsum()\n",
+    "    df_country['Total Deaths'] = df_country['Deaths'].cumsum()\n",
+    "\n",
+    "    # Plot time series graph\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.plot(df_country['Date'], df_country['Total Confirmed'], label=\"Confirmed Cases\", color='blue')\n",
+    "    plt.plot(df_country['Date'], df_country['Total Recovered'], label=\"Recovered Cases\", color='green')\n",
+    "    plt.plot(df_country['Date'], df_country['Total Deaths'], label=\"Deaths\", color='red')\n",
+    "\n",
+    "    # Formatting the plot\n",
+    "    plt.xlabel(\"Date\")\n",
+    "    plt.ylabel(\"Cumulative Count\")\n",
+    "    plt.title(f\"COVID-19 Time Series for {country} ({from_date} to {to_date})\")\n",
+    "    plt.legend()\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    # Show plot\n",
+    "    plt.show()"
    ]
   }
  ],
