--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,41 +53,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load dataset\n",
-    "df = pd.read_csv(\"cleaned_dataset.csv\")\n",
+    "# # Load dataset\n",
+    "# df = pd.read_csv(\"cleaned_dataset.csv\")\n",
     "\n",
-    "# Convert Date column to datetime format\n",
-    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "# # Convert Date column to datetime format\n",
+    "# df['Date'] = pd.to_datetime(df['Date'])\n",
     "\n",
-    "# Choose a country (e.g., 'Mexico')\n",
-    "country = \"Mexico\"\n",
-    "df_country = df[df['Country'] == country].sort_values(by=\"Date\")\n",
+    "# # Choose a country (e.g., 'Mexico')\n",
+    "# country = \"Mexico\"\n",
+    "# df_country = df[df['Country'] == country].sort_values(by=\"Date\")\n",
     "\n",
-    "# Compute cumulative sum\n",
-    "df_country['Total Confirmed'] = df_country['Confirmed'].cumsum()\n",
-    "df_country['Total Recovered'] = df_country['Recovered'].cumsum()\n",
-    "df_country['Total Deaths'] = df_country['Deaths'].cumsum()\n",
+    "# # Compute cumulative sum\n",
+    "# df_country['Total Confirmed'] = df_country['Confirmed'].cumsum()\n",
+    "# df_country['Total Recovered'] = df_country['Recovered'].cumsum()\n",
+    "# df_country['Total Deaths'] = df_country['Deaths'].cumsum()\n",
     "\n",
-    "# Plot time series graph\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(df_country['Date'], df_country['Total Confirmed'], label=\"Confirmed Cases\", color='blue')\n",
-    "plt.plot(df_country['Date'], df_country['Total Recovered'], label=\"Recovered Cases\", color='green')\n",
-    "plt.plot(df_country['Date'], df_country['Total Deaths'], label=\"Deaths\", color='red')\n",
+    "# # Plot time series graph\n",
+    "# plt.figure(figsize=(12, 6))\n",
+    "# plt.plot(df_country['Date'], df_country['Total Confirmed'], label=\"Confirmed Cases\", color='blue')\n",
+    "# plt.plot(df_country['Date'], df_country['Total Recovered'], label=\"Recovered Cases\", color='green')\n",
+    "# plt.plot(df_country['Date'], df_country['Total Deaths'], label=\"Deaths\", color='red')\n",
     "\n",
-    "# Formatting the plot\n",
-    "plt.xlabel(\"Date\")\n",
-    "plt.ylabel(\"Cumulative Count\")\n",
-    "plt.title(f\"COVID-19 Time Series for {country}\")\n",
-    "plt.legend()\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.grid(True)\n",
+    "# # Formatting the plot\n",
+    "# plt.xlabel(\"Date\")\n",
+    "# plt.ylabel(\"Cumulative Count\")\n",
+    "# plt.title(f\"COVID-19 Time Series for {country}\")\n",
+    "# plt.legend()\n",
+    "# plt.xticks(rotation=45)\n",
+    "# plt.grid(True)\n",
     "\n",
-    "# Show plot\n",
-    "# plt.show()"
+    "# # Show plot\n",
+    "# # plt.show()"
    ]
   },
   {
