--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -98,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Country Based Time Series Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,6 +151,31 @@
     "\n",
     "    # Show plot\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continent Based Time Series Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_multiple_timeseries(regions: list, column: str, from_date: str, to_date: str):\n",
+    "    \"\"\"\n",
+    "    Plots a time series graph for multiple regions (countries, continents, or World) for a given column.\n",
+    "\n",
+    "    Parameters:\n",
+    "        regions (list): List of regions (country names, continent names, or \"World\").\n",
+    "        column (str): The column to plot (\"Confirmed\", \"Recovered\", or \"Deaths\").\n",
+    "        from_date (str): Start date in 'YYYY-MM-DD' format.\n",
+    "        to_date (str): End date in 'YYYY-MM-DD' format.\n",
+    "    \"\"\""
    ]
   }
  ],
