--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -175,7 +175,15 @@
     "        column (str): The column to plot (\"Confirmed\", \"Recovered\", or \"Deaths\").\n",
     "        from_date (str): Start date in 'YYYY-MM-DD' format.\n",
     "        to_date (str): End date in 'YYYY-MM-DD' format.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "\n",
+    "    df = pd.DataFrame(covid_19_dataset)\n",
+    "\n",
+    "    # Convert Date column to datetime\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "    # Filter dataset for date range\n",
+    "    df = df[(df['Date'] >= from_date) & (df['Date'] <= to_date)]"
    ]
   }
  ],
