--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -183,7 +183,30 @@
     "    df['Date'] = pd.to_datetime(df['Date'])\n",
     "\n",
     "    # Filter dataset for date range\n",
-    "    df = df[(df['Date'] >= from_date) & (df['Date'] <= to_date)]"
+    "    df = df[(df['Date'] >= from_date) & (df['Date'] <= to_date)]\n",
+    "\n",
+    "    # Initialize the plot\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "    for region in regions:\n",
+    "        if region == \"World\":\n",
+    "            # Aggregate data globally\n",
+    "            df_region = df.groupby(\"Date\")[column].sum().reset_index()\n",
+    "        elif region in regions_dataset[\"Continent\"].unique():\n",
+    "            # Get countries belonging to the continent\n",
+    "            countries_in_continent = regions_dataset[regions_dataset[\"Continent\"] == region][\"Country\"].unique()\n",
+    "            df_region = df[df[\"Country\"].isin(countries_in_continent)].groupby(\"Date\")[column].sum().reset_index()\n",
+    "        else:\n",
+    "            # Treat as a country\n",
+    "            df_region = df[df[\"Country\"] == region].sort_values(by=\"Date\")\n",
+    "    \n",
+    "        # Compute cumulative sum for the selected column\n",
+    "        df_region[f\"Total {column}\"] = df_region[column].cumsum()\n",
+    "\n",
+    "        # Plot the time series\n",
+    "        plt.plot(df_region[\"Date\"], df_region[f\"Total {column}\"], label=f\"{region} ({column})\")\n",
+    "\n",
+    "    "
    ]
   }
  ],
