--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -206,7 +206,17 @@
     "        # Plot the time series\n",
     "        plt.plot(df_region[\"Date\"], df_region[f\"Total {column}\"], label=f\"{region} ({column})\")\n",
     "\n",
-    "    "
+    "    # Formatting the plot\n",
+    "    plt.xlabel(\"Date\")\n",
+    "    plt.ylabel(\"Cumulative Count\")\n",
+    "    plt.title(f\"COVID-19 {column} Cases Over Time ({from_date} to {to_date})\")\n",
+    "    plt.legend()\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n"
    ]
   }
  ],
