--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -215,8 +215,7 @@
     "    plt.grid(True)\n",
     "\n",
     "    # Show plot\n",
-    "    plt.show()\n",
-    "\n"
+    "    plt.show()"
    ]
   }
  ],
