--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -217,6 +217,13 @@
     "    # Show plot\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Widgets"
+   ]
   }
  ],
  "metadata": {
