--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -157,6 +157,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Region Based Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_region_timeseries(region: str, from_date: str, to_date: str):\n",
+    "    \"\"\"\n",
+    "    Plots a time series graph for a given country, continent, or the world within a specified date range.\n",
+    "\n",
+    "    Parameters:\n",
+    "        region (str): The country, continent, or \"World\".\n",
+    "        from_date (str): Start date in 'YYYY-MM-DD' format.\n",
+    "        to_date (str): End date in 'YYYY-MM-DD' format.\n",
+    "    \"\"\"\n",
+    "    global regions_dataset  # Assumes regions_dataset is defined somewhere in the notebook\n",
+    "    df = pd.read_csv(\"cleaned_dataset.csv\")\n",
+    "\n",
+    "    # Convert Date column to datetime\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "    # Filter dataset for the given date range\n",
+    "    df = df[(df['Date'] >= from_date) & (df['Date'] <= to_date)]\n",
+    "\n",
+    "    if region == \"World\":\n",
+    "        # Aggregate data for the entire world\n",
+    "        df_region = df.groupby(\"Date\")[[\"Confirmed\", \"Recovered\", \"Deaths\"]].sum().reset_index()\n",
+    "    elif region in regions_dataset[\"Continent\"].unique():\n",
+    "        # Get countries belonging to the specified continent\n",
+    "        countries_in_continent = regions_dataset[regions_dataset[\"Continent\"] == region][\"Country\"].unique()\n",
+    "        df_region = df[df[\"Country\"].isin(countries_in_continent)].groupby(\"Date\")[[\"Confirmed\", \"Recovered\", \"Deaths\"]].sum().reset_index()\n",
+    "    else:\n",
+    "        # Treat as a country\n",
+    "        df_region = df[df[\"Country\"] == region].sort_values(by=\"Date\")\n",
+    "\n",
+    "    # Compute cumulative sum\n",
+    "    df_region[\"Total Confirmed\"] = df_region[\"Confirmed\"].cumsum()\n",
+    "    df_region[\"Total Recovered\"] = df_region[\"Recovered\"].cumsum()\n",
+    "    df_region[\"Total Deaths\"] = df_region[\"Deaths\"].cumsum()\n",
+    "\n",
+    "    # Plot time series graph\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.plot(df_region[\"Date\"], df_region[\"Total Confirmed\"], label=\"Confirmed Cases\", color='blue')\n",
+    "    plt.plot(df_region[\"Date\"], df_region[\"Total Recovered\"], label=\"Recovered Cases\", color='green')\n",
+    "    plt.plot(df_region[\"Date\"], df_region[\"Total Deaths\"], label=\"Deaths\", color='red')\n",
+    "\n",
+    "    # Formatting the plot\n",
+    "    plt.xlabel(\"Date\")\n",
+    "    plt.ylabel(\"Cumulative Count\")\n",
+    "    plt.title(f\"COVID-19 Time Series for {region} ({from_date} to {to_date})\")\n",
+    "    plt.legend()\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    # Show plot\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Continent Based Time Series Plotting"
    ]
   },
@@ -230,6 +298,87 @@
    "metadata": {},
    "source": [
     "### Creating Countries & Continents Dropdown Menus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continent_dropdown_menu = wgts.Dropdown(\n",
+    "    options= regions_dataset['Continent'].unique(),\n",
+    "    description='Continent:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "continent_filter = regions_dataset['Continent'] == continent_dropdown_menu.value\n",
+    "countries = regions_dataset[continent_filter]\n",
+    "countries = countries['Country']\n",
+    "\n",
+    "countries_dropdown_menu = wgts.Dropdown(\n",
+    "    options= countries,\n",
+    "    description='Country:',\n",
+    "    disabled=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating From/To Day DatePickers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "# minimum date value in dataset\n",
+    "dateMin = datetime.datetime.strptime(covid_19_dataset['Date'].min(), '%Y-%m-%d').date()\n",
+    "# maximum date value in dataset\n",
+    "dateMax = datetime.datetime.strptime(covid_19_dataset['Date'].max(), '%Y-%m-%d').date()\n",
+    "\n",
+    "from_datepicker = wgts.DatePicker(\n",
+    "    description='From:',\n",
+    "    disabled=False,\n",
+    "    value=dateMin,\n",
+    "    max=dateMax,\n",
+    "    min=dateMin\n",
+    ")\n",
+    "\n",
+    "to_datepicker = wgts.DatePicker(\n",
+    "    description='To:',\n",
+    "    disabled=False,\n",
+    "    value=dateMin,\n",
+    "    max=dateMax,\n",
+    "    min=dateMin\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Reload Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload_button = wgts.Button(\n",
+    "    description='Reload',\n",
+    "    disabled=False,\n",
+    "    button_style='info',\n",
+    "    tooltip='Reload',\n",
+    "    icon='check'\n",
+    ")"
    ]
   }
  ],
