--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -101,62 +101,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Country Based Time Series Plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_country_timeseries(country: str, from_date: str, to_date: str):\n",
-    "    \"\"\"\n",
-    "    Plots a time series graph for a given country and date range.\n",
-    "    \n",
-    "    Parameters:\n",
-    "        country (str): The country name to filter data for.\n",
-    "        from_date (str): The start date in 'YYYY-MM-DD' format.\n",
-    "        to_date (str): The end date in 'YYYY-MM-DD' format.\n",
-    "    \"\"\"\n",
-    "    # Load dataset\n",
-    "    df = pd.DataFrame(covid_19_dataset)\n",
-    "\n",
-    "    # Convert Date column to datetime\n",
-    "    df['Date'] = pd.to_datetime(df['Date'])\n",
-    "    # Filter data for the specified country and date range\n",
-    "    df_country = df[(df['Country'] == country) & (df['Date'] >= from_date) & (df['Date'] <= to_date)]\n",
-    "    \n",
-    "    # Sort values by date\n",
-    "    df_country = df_country.sort_values(by=\"Date\")\n",
-    "\n",
-    "    # Compute cumulative sum\n",
-    "    df_country['Total Confirmed'] = df_country['Confirmed'].cumsum()\n",
-    "    df_country['Total Recovered'] = df_country['Recovered'].cumsum()\n",
-    "    df_country['Total Deaths'] = df_country['Deaths'].cumsum()\n",
-    "\n",
-    "    # Plot time series graph\n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    plt.plot(df_country['Date'], df_country['Total Confirmed'], label=\"Confirmed Cases\", color='blue')\n",
-    "    plt.plot(df_country['Date'], df_country['Total Recovered'], label=\"Recovered Cases\", color='green')\n",
-    "    plt.plot(df_country['Date'], df_country['Total Deaths'], label=\"Deaths\", color='red')\n",
-    "\n",
-    "    # Formatting the plot\n",
-    "    plt.xlabel(\"Date\")\n",
-    "    plt.ylabel(\"Cumulative Count\")\n",
-    "    plt.title(f\"COVID-19 Time Series for {country} ({from_date} to {to_date})\")\n",
-    "    plt.legend()\n",
-    "    plt.xticks(rotation=45)\n",
-    "    plt.grid(True)\n",
-    "\n",
-    "    # Show plot\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Region Based Plotting"
    ]
   },
@@ -225,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Continent Based Time Series Plotting"
+    "### Multiple Time Series Plotting"
    ]
   },
   {
